--- a/src/app/middle-bar/middle-bar.component.html
+++ b/src/app/middle-bar/middle-bar.component.html
@@ -1,56 +1,92 @@
-<div class="mainCont">
+  <div class="mainCont">
     <div class="business-advice">
       <h1><b>Business Advice</b></h1>
       <p>
         Problems trying to resolve the conflict between<br>
-         the two major realms of classical physics: Newtonian mechanics.
+        the two major realms of classical physics: Newtonian mechanics.
       </p>
     </div>
-  
-  <div class="input-container">
-    <div class="gg1">
-    <div class="input-group">
-   <input type="text" placeholder="Put The clients First">
-    </div>
-    <div class="input-group">
-      <input type="text" placeholder="Put The clients First">
-    </div>
-    <div class="input-group">
-      <input type="text" placeholder="Put The clients First">
-    </div>
-    </div>
 
-    <div class="gg2">
-    <div class="input-group">
-      <input type="text" placeholder="Put The clients First">
-    </div>
-    <div class="input-group">
-      <input type="text" placeholder="Put The clients First">
-    </div>
-    <div class="input-group">
-      <input type="text" placeholder="Put The clients First">
-    </div>
+    <div class="input-container">
+      <div class="row1">
+        <div class="boxes">
+
+          <div class="box">
+            <div class="b">
+            <mat-icon>group</mat-icon>
+            <div class="span">
+            <span>Put The</span> 
+            <span>clients First</span></div>
+          </div>
+          </div>
+
+
+          <div class="box">
+            <div class="b">
+            <mat-icon>group</mat-icon>
+            <div class="span">
+            <span>Put The</span> 
+            <span>clients First</span></div>
+          </div>
+          </div>
+
+
+          <div class="box">
+            <div class="b">
+            <mat-icon>group</mat-icon>
+            <div class="span">
+              <span>Put The</span><span>clients First</span></div>
+            
+          </div>
+        </div>
+        
+      </div>
+
+      <div class="row2">
+        <div class="boxes2">  
+
+          <div class="box2">
+            <div class="b">
+            <mat-icon>group</mat-icon>
+            <div class="span">
+            <span>Put The</span><span>clients First</span></div>
+            
+          </div>
+          </div> 
+          
+          <div class="box2">
+            <div class="b">
+            <mat-icon>group</mat-icon>
+            <div class="span">
+            <span>Put The</span><span>Clients First</span></div>
+          </div>
+          </div>
+
+          <div class="box2">
+            <div class="b">
+            <mat-icon>group</mat-icon>
+            <div class="span">
+              <span>Put The</span><span>clients First</span></div>
+            
+          </div>
+          </div>            
+          
+          
+        </div>  
+      </div>
+       
+
+    <div class="buttons">
+      <button class="btn btn-blue">Blue Button</button>
+      <button class="btn btn-white">White Button</button>
     </div>
   </div>
-  
-  <div class="buttons">
-    <button class="btn btn-blue">Blue Button</button>
-    <button class="btn btn-white">White Button</button>
-  </div>
-  </div>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+
+
+
+
+
+
+
+
