--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,21 +1,26 @@
-.mainContainer{
-display: flex;
-flex-direction: column;
-height: 100vh;
-width: 100%;
-
-
+*body{
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
-app-tool-bar{
-height: 50%;
-background-image:linear-gradient(to right ,white,transparent),url('../assets/services-business.jpg');
-background-repeat: no-repeat;
-background-size: cover;
-
-}
-app-middle-bar{
+.mainContainer {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+  
+    width: 100%;
+  }
+  
+  app-tool-bar {
+    height: 45%;
+    background-image: linear-gradient(to right, white, transparent), url('../assets/background.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: top, center;
+  }
+  
+  app-middle-bar {
     background-color: white;
     height: 50%;
-
-
-}
+  }
+  
