--- a/src/app/tool-bar/tool-bar.component.scss
+++ b/src/app/tool-bar/tool-bar.component.scss
@@ -1,14 +1,16 @@
 .toolbar {
   display: flex;
-  align-items: center;
+  align-items: center;    
   justify-content: space-between;
   background-color: transparent;  
   color: black;
-  padding: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 .logo {
   font-weight: bold;
+  
 }
 
 .middle-section span {
@@ -24,7 +26,7 @@
 }
 
 .get-in-touch-button {
-  background-color: blue;
+  background-color: rgb(31, 154, 243);
   color: white;
   padding: 10px;
   border: none;
@@ -59,7 +61,7 @@ p {
 }
 
 .blue-button {
-  background-color: blue;
+  background-color: rgb(31, 154, 243);
   color: white;
   padding: 10px 20px;
   border: none;
@@ -70,11 +72,11 @@ p {
 
 .white-button {
   background-color: transparent;
-  color: blue;
+  color:rgb(31, 154, 243);
   padding: 10px 20px;
   
   border-radius: 48px;
-  border-color: blue;
+  border-color: rgb(31, 154, 243);
   border: 1px solid;
 }
 
