--- a/src/app/middle-bar/middle-bar.component.html
+++ b/src/app/middle-bar/middle-bar.component.html
@@ -1,92 +1,30 @@
-  <div class="mainCont">
-    <div class="business-advice">
-      <h1><b>Business Advice</b></h1>
-      <p>
-        Problems trying to resolve the conflict between<br>
-        the two major realms of classical physics: Newtonian mechanics.
-      </p>
+<div class="Container">
+    <div class="headings">
+      <p class="header">Business Advice</p>
+      <p>Problems trying to resolve the conflict between <br>
+        the two major realms of classical physics, Newtonian mechanics</p>
     </div>
-
-    <div class="input-container">
-      <div class="row1">
-        <div class="boxes">
-
-          <div class="box">
-            <div class="b">
-            <mat-icon>group</mat-icon>
-            <div class="span">
-            <span>Put The</span> 
-            <span>clients First</span></div>
-          </div>
-          </div>
-
-
-          <div class="box">
-            <div class="b">
-            <mat-icon>group</mat-icon>
-            <div class="span">
-            <span>Put The</span> 
-            <span>clients First</span></div>
-          </div>
-          </div>
-
-
-          <div class="box">
-            <div class="b">
-            <mat-icon>group</mat-icon>
-            <div class="span">
-              <span>Put The</span><span>clients First</span></div>
-            
+  
+    <div class="Boxes">
+      <div class="topBoxes">
+        <div class="Box" *ngFor="let box of boxElements">
+          <mat-icon>{{ box.icon }}</mat-icon>
+          <div class="text">
+            <span>{{ box.firstPart }}</span>
+            <span>{{ box.secondPart }}</span>
           </div>
         </div>
-        
       </div>
-
-      <div class="row2">
-        <div class="boxes2">  
-
-          <div class="box2">
-            <div class="b">
-            <mat-icon>group</mat-icon>
-            <div class="span">
-            <span>Put The</span><span>clients First</span></div>
-            
+  
+      <div class="bottomBoxes">
+        <div class="Box" *ngFor="let box of boxElements">
+          <mat-icon>{{ box.icon }}</mat-icon>
+          <div class="text">
+            <span>{{ box.firstPart }}</span>
+            <span>{{ box.secondPart }}</span>
           </div>
-          </div> 
-          
-          <div class="box2">
-            <div class="b">
-            <mat-icon>group</mat-icon>
-            <div class="span">
-            <span>Put The</span><span>Clients First</span></div>
-          </div>
-          </div>
-
-          <div class="box2">
-            <div class="b">
-            <mat-icon>group</mat-icon>
-            <div class="span">
-              <span>Put The</span><span>clients First</span></div>
-            
-          </div>
-          </div>            
-          
-          
-        </div>  
+        </div>
       </div>
-       
-
-    <div class="buttons">
-      <button class="btn btn-blue">Blue Button</button>
-      <button class="btn btn-white">White Button</button>
     </div>
   </div>
-
-
-
-
-
-
-
-
-
+  
