--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .mainContainer {
     display: flex;
@@ -12,7 +13,7 @@
   }
   
   app-tool-bar {
-    height: 45%;
+    height: 50%;
     background-image: linear-gradient(to right, white, transparent), url('../assets/background.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
