--- a/src/app/middle-bar/middle-bar.component.html
+++ b/src/app/middle-bar/middle-bar.component.html
@@ -1,7 +1,7 @@
 <div class="Container">
     <div class="headings">
       <p class="header">Business Advice</p>
-      <p>Problems trying to resolve the conflict between <br>
+      <p class="paragraph">Problems trying to resolve the conflict between <br>
         the two major realms of classical physics, Newtonian mechanics</p>
     </div>
   
@@ -21,7 +21,8 @@
           <mat-icon>{{ box.icon }}</mat-icon>
           <div class="text">
             <span>{{ box.firstPart }}</span>
-            <span>{{ box.secondPart }}</span>
+            <span>{{ box.secondPart }}</span>           
+
           </div>
         </div>
       </div>
