--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -25,10 +25,10 @@
   <div class="paragraph">
     <div class="header">
       <p class="content"><b>Business Advisory</b></p>
-      <p class="content"><br>Services</p>
+      <p class="content1"><br><b>Services</b></p>
     </div>
 
-    <p>
+    <p style="color: gray;">
       Disaster recovery planning, business continuity<br>
       management, and disaster recovery.
 
