--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,14 +7,14 @@
 .mainContainer {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-  
+    height: 100vh;  
     width: 100%;
+    
   }
   
   app-tool-bar {
     height: 50%;
-    background-image: linear-gradient(to right, white, transparent), url('../assets/background.jpg');
+    background-image: linear-gradient(to right, white, transparent), url('../assets/COVER1.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-position: top, center;
@@ -24,4 +24,6 @@
     background-color: white;
     height: 50%;
   }
+
+  
   
