--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -24,9 +24,10 @@
 
   <div class="paragraph">
     <div class="header">
-      <p class="content"><b>Business Advisory</b></p>
-      <p class="content1"><br><b>Services</b></p>
+      <p class="content"><b>Business Advisory<br> <br>Services</b></p>
+      <!--<p class="content1"><br><b>Services</b></p>-->
     </div>
+    
 
     <p style="color: gray;">
       Disaster recovery planning, business continuity<br>
